--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1 class="text-5xl font-bold text-center">The Legal Practice Area</h1>
             <p class="text-gray-500 lg:w-1/2 mx-auto text-center my-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-10">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-10 text-">
                 <div class=" text-center space-y-4 border-b p-6">
                     <img class="mx-auto" src="images/business.png" alt="">
                     <h1 class="text-3xl">Business Law</h1>
@@ -120,6 +120,72 @@
                 </div>
             </div>
 
+        </section>
+        <!-- Frequently Asked Any Questions -->
+        <section>
+            <h1 class="text-5xl font-bold text-center">Frequently Asked Any Questions</h1>
+            <p class="text-gray-500 lg:w-1/2 mx-auto text-center my-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <div class="flex items-center my-10">
+                <div class="flex-1 space-y-5">
+                    <div tabindex="0" class="collapse collapse-plus border border-base-300 bg-base-200">
+                        <div class="collapse-title text-xl font-medium">
+                           1. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                        </div>
+                      </div>
+                    <div tabindex="0" class="collapse collapse-plus border border-base-300 bg-base-200">
+                        <div class="collapse-title text-xl font-medium">
+                           2. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                        </div>
+                      </div>
+                    <div tabindex="0" class="collapse collapse-plus border border-base-300 bg-base-200">
+                        <div class="collapse-title text-xl font-medium">
+                           3. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                        </div>
+                      </div>
+                    <div tabindex="0" class="collapse collapse-plus border border-base-300 bg-base-200">
+                        <div class="collapse-title text-xl font-medium">
+                         4. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                        </div>
+                      </div>
+
+                </div>
+                <div class="flex-1  flex justify-center">
+                    <img class="w-2/3  " src="images/faq.png" alt="">
+                </div>
+            </div>
+            <p></p>
+        </section>
+        <!-- Contact With Us -->
+        <section>
+            <h1 class="text-5xl font-bold text-center">Contact With Us</h1>
+            <p class="text-gray-500 lg:w-1/2 mx-auto text-center my-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+           <div class="flex">
+                <div class="flex-1">
+                    <div>
+                        <img src="images/location.png" alt="">
+                        <h1 class="text-3xl">Address</h1>
+                        <p>A108 Adam Street,<br>
+                            New York, NY 535022</p>
+                    </div>
+                </div>
+                <div class="flex-1">
+                    <img src="" alt="">
+                </div>
+              
+           </div>
         </section>
     </main>
 </body>
