Contact With Us

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         </section>
         <!-- Frequently Asked Any Questions -->
-        <section>
+        <section>f
             <h1 class="text-5xl font-bold text-center">Frequently Asked Any Questions</h1>
             <p class="text-gray-500 lg:w-1/2 mx-auto text-center my-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="flex items-center my-10">
@@ -172,17 +172,42 @@
             <h1 class="text-5xl font-bold text-center">Contact With Us</h1>
             <p class="text-gray-500 lg:w-1/2 mx-auto text-center my-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
-           <div class="flex">
-                <div class="flex-1">
-                    <div>
-                        <img src="images/location.png" alt="">
+           <div class="flex gap-5">
+                <div class="flex-1 grid grid-cols-2 gap-5">
+
+                    <div class="bg-gray-300 text-center px-5 py-10 space-y-5 rounded-lg">
+                        <img class="mx-auto" src="images/location.png" alt="">
                         <h1 class="text-3xl">Address</h1>
                         <p>A108 Adam Street,<br>
                             New York, NY 535022</p>
                     </div>
+                    <div class="bg-gray-300 text-center px-5 py-10 space-y-5 rounded-lg">
+                        <img class="mx-auto" src="images/call.png" alt="">
+                        <h1 class="text-3xl">Address</h1>
+                        <p>A108 Adam Street,<br>
+                            New York, NY 535022</p>
+                    </div>
+                    <div class="bg-gray-300 text-center px-5 py-10 space-y-5 rounded-lg">
+                        <img class="mx-auto" src="images/email.png" alt="">
+                        <h1 class="text-3xl">Address</h1>
+                        <p>A108 Adam Street,<br>
+                            New York, NY 535022</p>
+                    </div>
+                    <div class="bg-gray-300 text-center px-5 py-10 space-y-5 rounded-lg">
+                        <img class="mx-auto" src="images/time.png" alt="">
+                        <h1 class="text-3xl">Address</h1>
+                        <p>A108 Adam Street,<br>
+                            New York, NY 535022</p>
+                    </div>
+                    
+
                 </div>
-                <div class="flex-1">
-                    <img src="" alt="">
+                <div class="flex-1 space-y-5 p-5">
+                    <input  class="w-full p-5 rounded-lg border-none outline-none bg-gray-300" type="text" placeholder="Your Name">
+                    <input  class="w-full p-5 rounded-lg border-none outline-none bg-gray-300" type="text" placeholder="Your Email">
+                    <input  class="w-full p-5 rounded-lg border-none outline-none bg-gray-300" type="text" placeholder="Subject">
+                   <textarea name="" id="" class="w-full  p-5 rounded-lg border-none outline-none min-h-48 max-h-48 bg-gray-300"  placeholder="Your" ></textarea>
+                   <button class="bg-yellow-700 rounded-lg text-white py-4 w-full text-lg font-semibold">Free Consultation</button>
                 </div>
               
            </div>
