--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <section>f
             <h1 class="text-5xl font-bold text-center">Frequently Asked Any Questions</h1>
             <p class="text-gray-500 lg:w-1/2 mx-auto text-center my-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-            <div class="flex items-center my-10">
+            <div class="flex items-center flex-col lg:flex-row my-10">
                 <div class="flex-1 space-y-5">
                     <div tabindex="0" class="collapse collapse-plus border border-base-300 bg-base-200">
                         <div class="collapse-title text-xl font-medium">
@@ -161,7 +161,7 @@
                       </div>
 
                 </div>
-                <div class="flex-1  flex justify-center">
+                <div class="flex-1  flex justify-center mt-5 lg:mt-0">
                     <img class="w-2/3  " src="images/faq.png" alt="">
                 </div>
             </div>
@@ -172,7 +172,7 @@
             <h1 class="text-5xl font-bold text-center">Contact With Us</h1>
             <p class="text-gray-500 lg:w-1/2 mx-auto text-center my-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
-           <div class="flex gap-5">
+           <div class="flex flex-col md:flex-row gap-5">
                 <div class="flex-1 grid grid-cols-2 gap-5">
 
                     <div class="bg-gray-300 text-center px-5 py-10 space-y-5 rounded-lg">
@@ -202,7 +202,7 @@
                     
 
                 </div>
-                <div class="flex-1 space-y-5 p-5">
+                <div class="flex-1 space-y-4">
                     <input  class="w-full p-5 rounded-lg border-none outline-none bg-gray-300" type="text" placeholder="Your Name">
                     <input  class="w-full p-5 rounded-lg border-none outline-none bg-gray-300" type="text" placeholder="Your Email">
                     <input  class="w-full p-5 rounded-lg border-none outline-none bg-gray-300" type="text" placeholder="Subject">
