--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 
 
     </header>
-
     <main class="container mx-auto">
         <!-- The Legal Practice Area -->
         <section class="my-24">
@@ -213,5 +212,44 @@
            </div>
         </section>
     </main>
+
+    <footer class="bg-black mt-20">
+        <div class="footer justify-center  md:justify-between  container mx-auto text-white py-10 lg:py-32">
+            <nav>
+                <header class="footer-title">Services</header> 
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+              </nav> 
+              <nav>
+                <header class="footer-title">Company</header> 
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+              </nav> 
+              <nav>
+                <header class="footer-title">Legal</header> 
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+              </nav> 
+              <form>
+                <header class="footer-title">Newsletter</header> 
+                <fieldset class="form-control ">
+                  <label class="label">
+                    <span class="label-text text-white">Enter your email address</span>
+                  </label> 
+                  <div class="">
+                    <div class="bg-white py-4 rounded-lg">
+                        <input type="text" placeholder="username@site.com" class="border-none px-5 outline-none text-black text-base text-xl" /> 
+                        <button class="bg-yellow-700 rounded-lg text-white  font-semibold"> <i class="fa-solid fa-angle-right"></i></button>
+                    </div>
+                  </div>
+                </fieldset>
+              </form>
+        </div>
+      </footer>
 </body>
 </html>
